--- a/core-motives.html
+++ b/core-motives.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>منظور الفؤاد في فهم الطبيعة الإنسانية</title>
+    <title>مؤسس منظور الفؤاد في فهم الطبيعة الإنسانية - سفير الرحمة بجامعة ستانفورد</title>
     <style>
         * {
             margin: 0;
