--- a/core-motives.html
+++ b/core-motives.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>مؤسس منظور الفؤاد في فهم الطبيعة الإنسانية - سفير الرحمة بجامعة ستانفورد</title>
+    <title>مؤسس منظور الفؤاد في فهم الطبيعة الإنسانية- سفير الرحمة بجامعة ستانفورد</title>
     <style>
         * {
             margin: 0;
@@ -388,7 +388,7 @@
     <div class="container">
         <!-- Hero Section -->
         <div class="hero-section">
-            <h1 class="hero-title">مقتطفات من منظور الفؤاد في فهم الطبيعة الإنسانية</h1>
+            <h1 class="hero-title">مقتطفات من مؤسس منظور الفؤاد في فهم الطبيعة الإنسانية- سفير الرحمة بجامعة ستانفورد</h1>
             <p class="hero-subtitle">ملخص الدوافع الفطرية الثلاثة</p>
         </div>
 
@@ -761,7 +761,7 @@
         <!-- Author Signature -->
         <div class="author-signature">
             <h2 style="color: #ffc107; margin-bottom: 20px;">👨‍🏫 الكوتش محمود فؤاد</h2>
-            <p>منظور الفؤاد في فهم الطبيعة الإنسانية</p>
+            <p>مؤسس منظور الفؤاد في فهم الطبيعة الإنسانية- سفير الرحمة بجامعة ستانفورد</p>
         </div>
     </div>
 
