--- a/core-motives.html
+++ b/core-motives.html
@@ -388,7 +388,7 @@
     <div class="container">
         <!-- Hero Section -->
         <div class="hero-section">
-            <h1 class="hero-title">مقتطفات من مؤسس منظور الفؤاد في فهم الطبيعة الإنسانية- سفير الرحمة بجامعة ستانفورد</h1>
+            <h1 class="hero-title">مقتطفات من منظور الفؤاد في فهم الطبيعة الإنسانية</h1>
             <p class="hero-subtitle">ملخص الدوافع الفطرية الثلاثة</p>
         </div>
 
